fix z-index bug

--- a/static/src/stylesheets/module/facia-garnett/_item.scss
+++ b/static/src/stylesheets/module/facia-garnett/_item.scss
@@ -368,11 +368,6 @@ $block-height: 71px;
         overflow: hidden;
     }
 
-    .fc-item__header,
-    .fc-item__standfirst-wrapper {
-        z-index: 1;
-    }
-
     .fc-item__avatar {
         position: absolute;
         right: 0;
